# lfp-env

./: .gitattributes  .gitignore  Cargo.toml  README.md  deploy.py  install.ps1  install.sh  mise.toml  pixi-init-test.sh  pixi-init.ps1  pixi-init.sh  pixi-setup.ps1  pixi-setup.sh  pixi.toml  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test.sh
.cache/oh-my-posh/: omp.cache  omp.cache.269698a1-7be1-40a4-9777-19b1b4bb0fb3  omp.cache.48fc033c-1310-4ea6-9740-d6bba8edacdf  omp.cache.aa69d85f-3ee2-4749-9a2e-4cc01a54e8de
.github/workflows/: normalize-readme-repo-placeholder.yml  release.yml  test-on-tag.yml
.home/.cache/oh-my-posh/: omp.cache  omp.cache.48fc033c-1310-4ea6-9740-d6bba8edacdf  omp.cache.aa69d85f-3ee2-4749-9a2e-4cc01a54e8de
scripts/: deploy.py
src/: cli.rs  main.rs  requirements.rs  version.rs
src/install/: config.rs  download.rs  mise.rs  mod.rs  platform.rs  process.rs  profile.rs  unix.rs  windows.rs
tests/: cli_smoke.rs  docker-dev.sh  test-install.ps1  test-install.sh
tests/unix/: _test_lib.bash  test_bootstrap_core_tools.sh  test_idempotent_repeated_eval.sh  test_installs_argument_tools.sh
tests/windows/: _test_lib.ps1  test_bootstrap_core_tools.ps1  test_idempotent_repeated_run.ps1  test_installs_argument_tools.ps1
workflow/: deploy.py
