[package]
name = "lfp-env"
version = "0.1.0"
edition = "2021"

[dependencies]
lenient_semver = "0.4.2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
