[package]
name = "lfp-env"
version = "1.0.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
lenient_semver = "0.4.2"
log = "0.4"
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
serde = { version = "1", features = ["derive"] }
winreg = "0.52"
zip = { version = "2", default-features = false, features = ["deflate"] }


[profile.release]
opt-level = "z"     # Optimize for size ('z' is more aggressive than 's')
lto = true          # Enable Link Time Optimization (removes dead code across crates)
codegen-units = 1   # Reduces parallel builds to allow better size optimization
panic = "abort"     # Removes stack unwinding code (saves ~30KB+, but kills backtraces)
strip = true        # Automatically strips symbols and debug info
